--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "express-api-template",
-  "version": "1.0.0",
-  "description": "Backend primer",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "run test"
+    "start": "node ./src/bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cmcrawford2/express-api-template.git"
-  },
-  "keywords": [
-    "express",
-    "postgres",
-    "node"
-  ],
-  "author": "Cris",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/cmcrawford2/express-api-template/issues"
-  },
-  "homepage": "https://github.com/cmcrawford2/express-api-template#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
+  }
 }
