--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "./node_modules/.bin/eslint ./src",
     "pretty": "prettier --write '**/*.{js,json}' '!node_modules/**'",
     "postpretty": "yarn lint --fix",
-    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r @babel/register"
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha -r @babel/register",
+    "runQuery": "babel-node ./src/utils/runQuery"
   },
   "dependencies": {
     "chai": "^4.3.4",
@@ -22,6 +23,7 @@
     "mocha": "^9.1.3",
     "morgan": "~1.9.1",
     "nyc": "^15.1.0",
+    "pg": "^8.7.1",
     "sinon-chai": "^3.7.0",
     "supertest": "^6.1.6"
   },
